[project]
name = "hello-chainlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rehan Ahmed", email = "rehan007313@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.3",
    "openai>=1.68.2",
]

[project.scripts]
hello-chainlit = "hello_chainlit:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
